<resources>
    <string name="app_name">CameraFilm</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="what_your_name">What your name</string>
    <string name="camera_Film">Camara Film</string>
    <string name="film">Film</string>
    <string name="what_do_you_want_to_see">What do you want to see?</string>
    <string name="camera">Camera</string>
    <string name="about">about</string>
    <string name="textAbout">บอกลักษณะของกล้องฟิล์มและฟิล์มชนิดต่างๆ</string>
    <string name="srt101">Minolta SR-T101</string>
    <string name="m6">Lecica M6</string>
    <string name="kodakcolorplus200">Kodak Color Plus200</string>
    <string name="proimage100">Kodek ProImage 100</string>
    <string name="submit">submit</string>
    <string name="abouesrt101">ข้อมูลพื้นฐานและประวัติของกล้อง \nMinolta SRT 101 ยอดกล้อง SLR ในแถวหน้า ถือว่าเป็นกล้อง SLR Full Manual ที่ประสบความสำเร็จตัวหนึ่ง ของค่าย Minolta เลยทีเดียว จนได้มีการนำไป ต่อยอดพัฒนาต่อ อีกหลายโมเดล  SRT101 ผลิตในปี 1966-1975 ถือว่าเป็นต้นตระกูลของ SRT series และเป็นกล้องรุ่นแรกของโลกที่ใช้ระบบวัดแสงแบบ TTL (Through the Lens) หรือการวัดแสงผ่านเลนส์แบบ full aperture ซึ่งในยุคนั้นถือว่าเป็นการพัฒนาก้าวสำคัญของวงการกล้องและภาพถ่าย ซึ่งทางค่ายอื่นๆ ก็ได้นำไปใช้พัฒนา Product ของตนกันอย่างแพร่หลาย  ความสำเร็จของ SRT 101 สร้างชื่อเสียงเป็นอย่างมากให้กับ Minolta และผลักดันให้ SLR series เป็นหนึ่งในกล้องที่สายการผลิตได้รับความนิยมมากที่สุดในยุค 60s-70s</string>
    <string name="share_success_text">Success</string>

</resources>
